# polybot

./: .env  .gitignore  README.md  docker-compose.yml  test.sh
conv-backend-echo/: Dockerfile  (+2 more)
correction-adaptor/: .env  Dockerfile  main.py  main_test.py  pyproject.toml  requirements.txt  setup.py  tox.ini
correction-adaptor/app/: main.py  main_test.py  settings_test.py
correction-adaptor/app/backends/: __init___test.py  backends_test.py  base.py  base_test.py  echo.py  languagetool_test.py
correction-adaptor/app/routers/: message_test.py
correction-adaptor/app/test/: helpers.py
correction-adaptor/correction_adaptor/: exception_handlers.py  exception_handlers_test.py  main_test.py  models.py  settings.py  settings_test.py
correction-adaptor/correction_adaptor/backends/: __init__.py  __init___test.py  backends.py  backends_test.py  base.py  base_test.py  echo.py  echo_test.py  languagetool.py  languagetool_test.py
correction-adaptor/correction_adaptor/backends/languagetool/: __init__.py  languagetool.py  languagetool_test.py  mapping.py  mapping_test.py  models.py
correction-adaptor/correction_adaptor/routers/: languages.py  languages_test.py  message.py  message_test.py
correction-adaptor/correction_adaptor/test/: helpers.py
correction-adaptor/tests/fixtures/responses/: response.languages.json  response.success.corrections.json  response.success.no-corrections.json
correction-adaptor/tests/integration/: test_get_languages_echo.py  test_get_languages_languagetool.py  test_post_message.py  test_post_message_echo.py  test_post_message_languagetool.py
(+81 files in other folders)
